--- a/11UklSvt/obdelava.ipynb
+++ b/11UklSvt/obdelava.ipynb
@@ -97,12 +97,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
     "def linear(x, k, c): \n",
-    "    return "
+    "    return k * x + c"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([2.0231181484902474+/-0.05777293486473132], dtype=object)"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "val_dol = 633e-9\n",
+    "\n",
+    "d = unp.uarray([11.2e-2], [0.1e-2])\n",
+    "z_0 = unp.uarray([36e-2 + 107e-2], [2e-2])\n",
+    "f = unp.uarray([1.6e-2], [0.2e-2])\n",
+    "\n",
+    "x = unp.uarray([183.3, 150, 132, 116, 103, 93, 86, 77], 8 * [0.5]) * 1e-3\n",
+    "\n",
+    "x -= -77e-3\n",
+    "\n",
+    "z_f = d - f + x\n",
+    "z_z = z_0 - x\n",
+    "\n",
+    "rec_R = 1/z_f + 1/z_z\n",
+    "\n",
+    "n = np.arange(len(rec_R))\n",
+    "\n",
+    "par, cov = curve_fit(linear, n, unp.nominal_values(rec_R/val_dol))\n",
+    "\n",
+    "k_1, c = par \n",
+    "dk_1, _  = np.sqrt(np.diag(cov))\n",
+    "k = unp.uarray([k_1], [dk_1])\n",
+    "\n",
+    "r = unp.sqrt(1/k)\n",
+    "\n",
+    "r * 1e3\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Plot\n",
+    "fig, ax = plt.subplots(1, 1, figsize=[3.5, 3])\n",
+    "\n",
+    "ax.scatter(n[1::2], 1e-6 * rec_R[1::2]/λ, label=r'temne cone')\n",
+    "ax.scatter(n[0::2], 1e-6 * rec_R[0::2]/λ, label=r'svetle cone')\n",
+    "n_lin = np.arange(-1, len(n)+1)\n",
+    "ax.plot(n_lin, 1e-6 * linear(n_lin, *par), color='darkslategrey', linestyle='-', zorder=-1)\n",
+    "\n",
+    "ax.set_xlim(-0.5, 4.5)\n",
+    "ax.set_title(r'Ekstremi Fresnelovega uklona')\n",
+    "ax.set_xlabel(r'$n$')\n",
+    "ax.set_ylabel(r'$1/\\lambda R_n\\,[\\mathrm{\\mu m^{-1}}]$')\n",
+    "ax.set_xticks(n)\n",
+    "ax.set_xticklabels([r'$n_0$'] + [f'$n_0 + {i}$' for i in [1, 3, 3, 4]])\n",
+    "ax.legend()\n",
+    "fig.tight_layout()\n",
+    "fig.savefig(f'fresnel-zones.pdf'\n"
    ]
   }
  ],
